all endpoint teste
